set01/problem05_compile_errors.txt
Compilation started at 1/23/2024, 9:57:11 PM
Compilation finished at 1/23/2024, 9:57:18 PM
Compilation started at 1/23/2024, 9:57:37 PM
Compilation finished at 1/23/2024, 9:57:38 PM
Compilation started at 1/23/2024, 9:58:54 PM
c:\Users\umesh\c-activity-sets\set01\problem05.c: In function 'output':
c:\Users\umesh\c-activity-sets\set01\problem05.c:35:47: error: stray '\' in program
     printf("the largest of %d,%d and %d is %d"\n,a,b,c,largest);
                                               ^
c:\Users\umesh\c-activity-sets\set01\problem05.c:35:48: error: expected ')' before 'n'
     printf("the largest of %d,%d and %d is %d"\n,a,b,c,largest);
                                                ^
Compilation finished at 1/23/2024, 9:58:55 PM
Compilation started at 1/23/2024, 9:59:22 PM
Compilation finished at 1/23/2024, 9:59:23 PM
